# space_ws

./: .gitignore  README.md
src/mppi_controller/: package.xml  setup.py
src/mppi_controller/mppi_controller/: canadarm_controller_node.py  controller_node.py  curiosity_controller_node.py  franka_controller_node.py
src/mppi_controller/mppi_controller/models/: curiosity.urdf  curiosity_mars_rover.urdf
src/mppi_controller/mppi_controller/runs/20250324-095833/: events.out.tfevents.1742810313.user.712.0
src/mppi_controller/mppi_controller/runs/20250324-100407/: events.out.tfevents.1742810647.user.1548.0
src/mppi_controller/mppi_controller/runs/20250324-111132/: events.out.tfevents.1742814692.user.2768.0
src/mppi_controller/mppi_controller/runs/20250324-111327/: events.out.tfevents.1742814807.user.2830.0
src/mppi_controller/mppi_controller/runs/20250324-115152/: events.out.tfevents.1742817112.chan-Bravo-17-C7VF.1453.0
src/mppi_controller/mppi_controller/runs/20250324-130531/: events.out.tfevents.1742821531.user.831.0
src/mppi_controller/mppi_controller/runs/20250324-130636/: events.out.tfevents.1742821596.user.893.0
src/mppi_controller/mppi_controller/runs/20250324-130722/: events.out.tfevents.1742821642.user.955.0
src/mppi_solver/: package.xml  setup.cfg  setup.py
src/mppi_solver/mppi_solver/: canadarm_solver_node.py  curiosity_solver_node.py  franka_solver_node.py
src/robot_manager/: CMakeLists.txt  package.xml
src/robot_manager/launch/: run_canadarm_control.launch.py  run_control.launch.py  run_curiosity_control.launch.py  run_sim.launch.py
src/space_robots_gz/: COLCON_IGNORE  Dockerfile  entrypoint.sh  entrypoint_rover_launch.sh  exec.sh  ros_run.sh  run.sh
src/space_robots_gz/demos/canadarm/: CMakeLists.txt
src/space_robots_gz/demos/canadarm_gz_plugin/: CMakeLists.txt  package.xml
src/space_robots_gz/demos/canadarm_gz_plugin/include/canadarm_gz_plugin/: canadarm_plugin.hpp
src/space_robots_gz/demos/canadarm_gz_plugin/src/: canadarm_plugin.cpp
src/space_robots_gz/demos/ets_vii/: CMakeLists.txt  package.xml
src/space_robots_gz/demos/ets_vii/config/: ets_vii_control.yaml
src/space_robots_gz/demos/ets_vii/launch/: spawn_ets_vii.launch.py  spawn_tumble_ets_vii.launch.py
src/space_robots_gz/demos/franka/: CMakeLists.txt  package.xml
src/space_robots_gz/moveit2/: Dockerfile
src/space_robots_gz/simulation/: package.xml
(+144 files in other folders)
